--- a/index.html
+++ b/index.html
@@ -3,23 +3,20 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Artur Pokusin</title>
+    <title>Robbie Rendon</title>
     <meta content="width=device-width, initial-scale=1" name="viewport">
     <meta content="index, follow" name="robots">
-    <meta content="Artur Pokusin" name="description">
-    <meta content="Artur Pokusin" name="author">
+    <meta content="Robbie Rendon" name="author">
+    <meta content="Robbie Rendon" name="description">
+    <meta content="Robbie Rendon" name="twitter:title">
+    <meta content="Robbie Rendon" property="og:title">
+    <meta content="Robbie Rendon" property="og:site_name">
+    <meta content="https://imrobbie.com" property="og:url">
     <meta content="summary" name="twitter:card">
-    <meta content="apokusin" name="twitter:site">
-    <meta content="Artur Pokusin" name="twitter:title">
-    <meta content="https://gravatar.com/avatar/5c858c5daef12e779828769ee705f46b?s=400" name="twitter:image:src">
-    <meta content="Artur Pokusin" property="og:title">
-    <meta content="Artur Pokusin" property="og:site_name">
-    <meta content="https://pokusin.com" property="og:url">
     <meta content="website" property="og:type">
-    <meta content="257445234976524" property="fb:app_id">
-    <meta content="https://gravatar.com/avatar/5c858c5daef12e779828769ee705f46b?s=400" property="og:image">
+    <meta content="https://imrobbie.com/robbie.jpg" name="twitter:image:src">
     <link href="/styles.css" rel="stylesheet">
-    <link href="https://gravatar.com/avatar/5c858c5daef12e779828769ee705f46b?s=64" rel="shortcut icon">
+    <link href="https://imrobbie.com/robbie.jpg" rel="shortcut icon">
 </head>
 
 <body class="loading-noscript" style="opacity: 0; transition: opacity 1s ease-out;">
@@ -28,11 +25,11 @@
         document.body.classList.add("loading-start");
     </script>
     <div class="intro">
-        <h1>Artur Pokusin</h1>
+        <h1>Robbie Rendon</h1>
         <footer class="contact">
             <ul>
                 <li>
-                    <a href="https://www.linkedin.com/in/arturpokusin" target="_blank"><svg height="16"
+                    <a href="https://www.linkedin.com/in/that1robbie/" target="_blank"><svg height="16"
                version="1.1"
                viewbox="0 0 16 16"
                width="16"
@@ -45,7 +42,7 @@
           <path d="M4 3.5c0 0.828-0.672 1.5-1.5 1.5s-1.5-0.672-1.5-1.5c0-0.828 0.672-1.5 1.5-1.5s1.5 0.672 1.5 1.5z"
                 fill="currentColor"></path></svg> Resume / LinkedIn</a>
                 </li>
-                <li>
+                <!-- <li>
                     <a href="https://twitter.com/pokusinator" target="_blank"><svg height="16"
                version="1.1"
                viewbox="0 0 16 16"
@@ -55,8 +52,8 @@
           <path d=
           "M16 3.538c-0.588 0.263-1.222 0.438-1.884 0.516 0.678-0.406 1.197-1.050 1.444-1.816-0.634 0.375-1.338 0.65-2.084 0.797-0.6-0.638-1.453-1.034-2.397-1.034-1.813 0-3.281 1.469-3.281 3.281 0 0.256 0.028 0.506 0.084 0.747-2.728-0.138-5.147-1.444-6.766-3.431-0.281 0.484-0.444 1.050-0.444 1.65 0 1.138 0.578 2.144 1.459 2.731-0.538-0.016-1.044-0.166-1.488-0.409 0 0.013 0 0.028 0 0.041 0 1.591 1.131 2.919 2.634 3.219-0.275 0.075-0.566 0.116-0.866 0.116-0.212 0-0.416-0.022-0.619-0.059 0.419 1.303 1.631 2.253 3.066 2.281-1.125 0.881-2.538 1.406-4.078 1.406-0.266 0-0.525-0.016-0.784-0.047 1.456 0.934 3.181 1.475 5.034 1.475 6.037 0 9.341-5.003 9.341-9.341 0-0.144-0.003-0.284-0.009-0.425 0.641-0.459 1.197-1.038 1.637-1.697z"
                 fill="currentColor"></path></svg> Tweets</a>
-                </li>
-                <li>
+                </li> -->
+                <!-- <li>
                     <a href="https://dribbble.com/playfulcyanide" target="_blank"><svg height="16"
                version="1.1"
                viewbox="0 0 16 16"
@@ -66,9 +63,9 @@
           <path d=
           "M8 16c-4.412 0-8-3.588-8-8s3.587-8 8-8c4.412 0 8 3.587 8 8s-3.588 8-8 8v0zM14.747 9.094c-0.234-0.075-2.116-0.634-4.256-0.291 0.894 2.456 1.256 4.456 1.328 4.872 1.531-1.037 2.625-2.678 2.928-4.581v0zM10.669 14.3c-0.103-0.6-0.497-2.688-1.456-5.181-0.016 0.006-0.031 0.009-0.044 0.016-3.856 1.344-5.241 4.016-5.362 4.266 1.159 0.903 2.616 1.444 4.194 1.444 0.947 0 1.85-0.194 2.669-0.544v0zM2.922 12.578c0.156-0.266 2.031-3.369 5.553-4.509 0.088-0.028 0.178-0.056 0.269-0.081-0.172-0.388-0.359-0.778-0.553-1.159-3.409 1.022-6.722 0.978-7.022 0.975-0.003 0.069-0.003 0.138-0.003 0.209 0 1.753 0.666 3.356 1.756 4.566v0zM1.313 6.609c0.306 0.003 3.122 0.016 6.319-0.831-1.131-2.013-2.353-3.706-2.534-3.953-1.913 0.903-3.344 2.666-3.784 4.784v0zM6.4 1.366c0.188 0.253 1.431 1.944 2.55 4 2.431-0.909 3.459-2.294 3.581-2.469-1.206-1.072-2.794-1.722-4.531-1.722-0.55 0.003-1.088 0.069-1.6 0.191v0zM13.291 3.691c-0.144 0.194-1.291 1.663-3.816 2.694 0.159 0.325 0.313 0.656 0.453 0.991 0.050 0.119 0.1 0.234 0.147 0.353 2.275-0.284 4.534 0.172 4.759 0.219-0.016-1.612-0.594-3.094-1.544-4.256v0z"
                 fill="currentColor"></path></svg> Dribbble</a>
-                </li>
+                </li> -->
                 <li>
-                    <a href="mailto:hi@pokusin.com"><svg height="16"
+                    <a href="mailto:robbie@pokusin.com"><svg height="16"
                version="1.1"
                viewbox="0 0 16 16"
                width="16"
@@ -90,42 +87,18 @@
 
         window.onload = loaded;
     </script>
-    <script>
-        (function(i, s, o, g, r, a, m) {
-            i["GoogleAnalyticsObject"] = r;
-            (i[r] =
-                i[r] ||
-                function() {
-                    (i[r].q = i[r].q || []).push(arguments);
-                }),
-            (i[r].l = 1 * new Date());
-            (a = s.createElement(o)), (m = s.getElementsByTagName(o)[0]);
-            a.async = 1;
-            a.src = g;
-            m.parentNode.insertBefore(a, m);
-        })(
-            window,
-            document,
-            "script",
-            "//www.google-analytics.com/analytics.js",
-            "ga"
-        );
-
-        ga("create", "UA-9559262-2", "auto");
-        ga("send", "pageview");
-    </script>
     <!-- Global site tag (gtag.js) - Google Analytics -->
 
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-9559262-2"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-9559262-29"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
 
         function gtag() {
             dataLayer.push(arguments);
         }
-        gtag("js", new Date());
+        gtag('js', new Date());
 
-        gtag("config", "UA-9559262-2");
+        gtag('config', 'UA-9559262-29');
     </script>
 </body>
 
