--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 fill="currentColor"></path></svg> Dribbble</a>
                 </li> -->
                 <li>
-                    <a href="mailto:robbie@pokusin.com"><svg height="16"
+                    <a href="mailto:hello@imrobbie.com"><svg height="16"
                version="1.1"
                viewbox="0 0 16 16"
                width="16"
