--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <footer class="contact">
             <ul>
                 <li>
-                    <a href="https://www.linkedin.com/in/that1robbie/" target="_blank"><svg height="16"
+                    <a href="https://www.linkedin.com/in/imrobbie/" target="_blank"><svg height="16"
                version="1.1"
                viewbox="0 0 16 16"
                width="16"
